add customer support

--- a/integrations/analytics/overview.mdx
+++ b/integrations/analytics/overview.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Supported Integrations"
+title: "Supported Analytics Integrations"
 description: "Mintlify integrates with a variety of analytics platforms."
 ---
 
 <CardGroup cols={2}>
   <Card
     title="Amplitude"
-    href="/analytics/set-up/amplitude"
+    href="/integrations/analytics/amplitude"
     icon={
 <svg className="h-7 w-7" width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M15.5988 8.04494C15.4989 7.91714 15.3924 7.84668 15.2646 7.84668C15.1728 7.85323 15.0876 7.88273 15.009 7.93188C14.0635 8.67087 12.7773 11.8055 11.7188 15.9412L12.6576 15.9477C14.5059 15.969 16.4165 15.9903 18.3008 16.0182C17.8027 14.1273 17.3341 12.5068 16.9015 11.1926C16.2674 9.28205 15.8414 8.42181 15.5988 8.04494Z" fill="#1E61F0"/>
@@ -15,7 +15,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Mixpanel"
-  href="/analytics/set-up/mixpanel"
+  href="/integrations/analytics/mixpanel"
   icon={
     <svg
       className="h-8 w-8"
@@ -33,7 +33,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="PostHog"
-  href="/analytics/set-up/posthog"
+  href="/integrations/analytics/posthog"
   icon={
     <svg
       className="h-8 w-8"
@@ -69,7 +69,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Google Analytics 4 (GA4)"
-  href="/analytics/set-up/google-analytics"
+  href="/integrations/analytics/google-analytics"
   icon={
     <svg
       className="h-6 w-6"
@@ -94,7 +94,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Google Tag Manager"
-  href="/analytics/set-up/google-tag-manager"
+  href="/integrations/analytics/google-tag-manager"
   icon={
     <svg
       className="h-7 w-7"
@@ -132,7 +132,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="HotJar"
-  href="/analytics/set-up/hotjar"
+  href="/integrations/analytics/hotjar"
   icon={
     <svg
       className="h-7 w-7"
@@ -156,7 +156,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Koala"
-  href="/analytics/set-up/koala"
+  href="/integrations/analytics/koala"
   icon={
     <svg className="h-8 w-8" width="121" height="121" viewBox="0 0 121 121" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M72.5246 72.3223C71.4431 72.3248 70.3866 72.6473 69.4886 73.2503C68.5911 73.8528 67.8916 74.7078 67.4796 75.7078C67.0676 76.7073 66.9611 77.8068 67.1736 78.8673C67.3861 79.9273 67.9081 80.9008 68.6736 81.6648C69.4391 82.4283 70.4136 82.9483 71.4746 83.1583C72.5351 83.3683 73.6346 83.2593 74.6331 82.8448C75.6321 82.4303 76.4856 81.7293 77.0861 80.8303C77.6866 79.9308 78.0071 78.8738 78.0071 77.7923C78.0071 77.0728 77.8651 76.3603 77.5896 75.6958C77.3141 75.0313 76.9101 74.4278 76.4006 73.9198C75.8911 73.4118 75.2866 73.0088 74.6216 72.7348C73.9566 72.4608 73.2436 72.3203 72.5246 72.3223Z" fill="#4D32E4"/>
@@ -168,7 +168,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="LogRocket"
-  href="/analytics/set-up/logrocket"
+  href="/integrations/analytics/logrocket"
   icon={
     <svg
       className="h-7 w-5"
@@ -196,7 +196,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Pirsch"
-  href="/analytics/set-up/pirsch"
+  href="/integrations/analytics/pirsch"
   icon={
     <>
       <svg
@@ -261,7 +261,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
 
 <Card
   title="Plausible"
-  href="/analytics/set-up/plausible"
+  href="/integrations/analytics/plausible"
   icon={
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -323,7 +323,7 @@ description: "Mintlify integrates with a variety of analytics platforms."
   }
 ></Card>
 
-<Card title="Fathom" href="/analytics/set-up/fathom" icon={
+<Card title="Fathom" href="/integrations/analytics/fathom" icon={
 <svg
 className="h-7 w-7"
   width="256"
@@ -350,9 +350,14 @@ className="h-7 w-7"
 
 <Card
   title="Clearbit"
-  href="/analytics/set-up/clearbit"
+  href="/integrations/analytics/clearbit"
   icon={
-    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 40 40">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="36"
+      height="36"
+      viewBox="0 0 40 40"
+    >
       <defs>
         <linearGradient id="clearbit-a" x1="50%" x2="100%" y1="0%" y2="100%">
           <stop offset="0%" stop-color="#DEF2FE"></stop>
@@ -366,18 +371,50 @@ className="h-7 w-7"
           <stop offset="0%" stop-color="#1CA7FD"></stop>
           <stop offset="100%" stop-color="#148CFC"></stop>
         </linearGradient>
-        <filter id="ck-icon-shadow" x="-50%" y="-50%" width="200%" height="200%">
+        <filter
+          id="ck-icon-shadow"
+          x="-50%"
+          y="-50%"
+          width="200%"
+          height="200%"
+        >
           <feOffset result="offOut" in="SourceGraphic" dx="0" dy="1"></feOffset>
-          <feGaussianBlur result="blurOut" in="offOut" stdDeviation="1"></feGaussianBlur>
+          <feGaussianBlur
+            result="blurOut"
+            in="offOut"
+            stdDeviation="1"
+          ></feGaussianBlur>
           <feBlend in="SourceGraphic" in2="blurOut" mode="normal"></feBlend>
         </filter>
       </defs>
       <g fill="none">
-        <path d="M27.9195733,37 L12.0804267,37 L11.4338943,36.9949826 C8.75934941,36.9515623 7.69554096,36.6271471 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 L3.81824005,33.1283803 C3.30403747,32.0897188 3.02217708,30.9433817 3.00125617,28.250264 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 L6.87161969,3.81824005 C7.91028124,3.30403747 9.05661831,3.02217708 11.749736,3.00125617 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 L36.18176,6.87161969 C36.6959625,7.91028124 36.9778229,9.05661831 36.9987438,11.749736 L37,27.9195733 L36.9949826,28.5661057 C36.9515623,31.2406506 36.6271471,32.304459 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 L33.1283803,36.18176 C32.0481723,36.7165306 30.8515024,37 27.9195733,37 Z" id="clearbit-edge" stroke-opacity="0.2" stroke="#9BADBC" fill-opacity="0" fill="#9BADBC"></path>
-        <path d="M27.9195733,37 L12.0804267,37 L11.4338943,36.9949826 C8.75934941,36.9515623 7.69554096,36.6271471 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 L3.81824005,33.1283803 C3.30403747,32.0897188 3.02217708,30.9433817 3.00125617,28.250264 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 L6.87161969,3.81824005 C7.91028124,3.30403747 9.05661831,3.02217708 11.749736,3.00125617 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 L36.18176,6.87161969 C36.6959625,7.91028124 36.9778229,9.05661831 36.9987438,11.749736 L37,27.9195733 L36.9949826,28.5661057 C36.9515623,31.2406506 36.6271471,32.304459 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 L33.1283803,36.18176 C32.0481723,36.7165306 30.8515024,37 27.9195733,37 Z" id="clearbit-fx" fill-opacity="0.2" fill="#9BADBC" filter="url(#ck-icon-shadow)"></path>
-        <path fill="url(#clearbit-a)" d="M37,20 L37,27.9195733 C37,31.0770355 36.6712426,32.2220075 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 C32.2220075,36.6712426 31.0770355,37 27.9195733,37 L20,37 L20,20 L37,20 Z"></path>
-        <path fill="url(#clearbit-b)" d="M20,3 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 C36.6712426,7.77799245 37,8.92296455 37,12.0804267 L37,20 L20,20 L20,3 Z"></path>
-        <path fill="url(#clearbit-c)" d="M12.0804267,3 L20,3 L20,37 L12.0804267,37 C8.92296455,37 7.77799245,36.6712426 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 C3.32875737,32.2220075 3,31.0770355 3,27.9195733 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 C7.77799245,3.32875737 8.92296455,3 12.0804267,3 Z"></path>
+        <path
+          d="M27.9195733,37 L12.0804267,37 L11.4338943,36.9949826 C8.75934941,36.9515623 7.69554096,36.6271471 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 L3.81824005,33.1283803 C3.30403747,32.0897188 3.02217708,30.9433817 3.00125617,28.250264 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 L6.87161969,3.81824005 C7.91028124,3.30403747 9.05661831,3.02217708 11.749736,3.00125617 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 L36.18176,6.87161969 C36.6959625,7.91028124 36.9778229,9.05661831 36.9987438,11.749736 L37,27.9195733 L36.9949826,28.5661057 C36.9515623,31.2406506 36.6271471,32.304459 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 L33.1283803,36.18176 C32.0481723,36.7165306 30.8515024,37 27.9195733,37 Z"
+          id="clearbit-edge"
+          stroke-opacity="0.2"
+          stroke="#9BADBC"
+          fill-opacity="0"
+          fill="#9BADBC"
+        ></path>
+        <path
+          d="M27.9195733,37 L12.0804267,37 L11.4338943,36.9949826 C8.75934941,36.9515623 7.69554096,36.6271471 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 L3.81824005,33.1283803 C3.30403747,32.0897188 3.02217708,30.9433817 3.00125617,28.250264 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 L6.87161969,3.81824005 C7.91028124,3.30403747 9.05661831,3.02217708 11.749736,3.00125617 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 L36.18176,6.87161969 C36.6959625,7.91028124 36.9778229,9.05661831 36.9987438,11.749736 L37,27.9195733 L36.9949826,28.5661057 C36.9515623,31.2406506 36.6271471,32.304459 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 L33.1283803,36.18176 C32.0481723,36.7165306 30.8515024,37 27.9195733,37 Z"
+          id="clearbit-fx"
+          fill-opacity="0.2"
+          fill="#9BADBC"
+          filter="url(#ck-icon-shadow)"
+        ></path>
+        <path
+          fill="url(#clearbit-a)"
+          d="M37,20 L37,27.9195733 C37,31.0770355 36.6712426,32.2220075 36.053905,33.3763285 C35.4365674,34.5306495 34.5306495,35.4365674 33.3763285,36.053905 C32.2220075,36.6712426 31.0770355,37 27.9195733,37 L20,37 L20,20 L37,20 Z"
+        ></path>
+        <path
+          fill="url(#clearbit-b)"
+          d="M20,3 L27.9195733,3 C31.0770355,3 32.2220075,3.32875737 33.3763285,3.94609499 C34.5306495,4.56343261 35.4365674,5.46935048 36.053905,6.62367147 C36.6712426,7.77799245 37,8.92296455 37,12.0804267 L37,20 L20,20 L20,3 Z"
+        ></path>
+        <path
+          fill="url(#clearbit-c)"
+          d="M12.0804267,3 L20,3 L20,37 L12.0804267,37 C8.92296455,37 7.77799245,36.6712426 6.62367147,36.053905 C5.46935048,35.4365674 4.56343261,34.5306495 3.94609499,33.3763285 C3.32875737,32.2220075 3,31.0770355 3,27.9195733 L3,12.0804267 C3,8.92296455 3.32875737,7.77799245 3.94609499,6.62367147 C4.56343261,5.46935048 5.46935048,4.56343261 6.62367147,3.94609499 C7.77799245,3.32875737 8.92296455,3 12.0804267,3 Z"
+        ></path>
       </g>
     </svg>
   }
