--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Build beautiful documentation that converts users'
+title: "Introduction"
+description: "Build beautiful documentation that converts users"
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
@@ -51,7 +51,7 @@ See how other companies are building high-converting documentation on our
 <Card
   title="Integrate Analytics"
   icon="chart-mixed"
-  href="/analytics/supported-integrations"
+  href="/integrations/analytics/overview"
 >
   Draw insights from user interactions with your documentation
 </Card>
