dark mode images

--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -38,12 +38,21 @@ To disable the default zoom on click for images, add the noZoom property to imag
 
 ### Linking Images
 
-To link an image, for example to create a button on your docs, encompass the image in a link with the `noZoom` property. Images in `a` tags will automatically have a pointer cursor. 
+To link an image, for example to create a button on your docs, encompass the image in a link with the `noZoom` property. Images in `a` tags will automatically have a pointer cursor.
 
 ```html
 <a href="https://mintlify.com" target="_blank">
   <img height="200" noZoom src="/path/image.jpg" />
 </a>
+```
+
+### Dark Mode
+
+To use separate images for light and dark mode, use Tailwind CSS to hide and show images.
+
+```html
+<img className="block h-32 dark:hidden" src="/path/image-light.jpg" />
+<img className="hidden h-32 dark:block" src="/path/image-dark.jpg" />
 ```
 
 ### Related
