fix wrong external link

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -163,7 +163,7 @@ Example: `mintlify`
   <img className="hidden h-32 dark:block" src="https://mintlify-assets.b-cdn.net/anchor-dark.png" />
   <Expandable title="Anchor">
     <ResponseField name="icon" type="string">
-    The [Font Awesome](https://fontawesome.com/search?s=brands%2Cduotone) icon used to feature the anchor.
+    The [Font Awesome](https://fontawesome.com/search?q=heart) icon used to feature the anchor.
 
     Example: `comments`
     </ResponseField>
