add openapi scraper

--- a/api-playground/openapi.mdx
+++ b/api-playground/openapi.mdx
@@ -19,6 +19,8 @@ By using the OpenAPI reference, the name, description, parameters, responses, an
   the OpenAPI file.
 </Note>
 
+You can autogenerate these MDX files from your OpenAPI spec using our scraper - learn more [here](/api-playground/openapi-generation).
+
 ### OpenAPI Schema
 
 Generate a page that displays an OpenAPI schema which is defined in an OpenAPI spec's `components.schemas` map.
