--- a/api-playground/openapi-generation.mdx
+++ b/api-playground/openapi-generation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Autogenerating Endpoints"
+title: "Autogenerate endpoints"
 description: "Create MDX files from your OpenAPI spec using our scraper"
 ---
 
