--- a/api-playground/openapi.mdx
+++ b/api-playground/openapi.mdx
@@ -7,7 +7,13 @@ description: "Reference OpenAPI endpoints for the API playground"
 
 In order to reference OpenAPI, you must have the OpenAPI file in either a `json` or `yaml` format loaded into the docs folder. The name is irrelevant as long as the file follows [OpenAPI specifications](https://swagger.io/specification/).
 
-### Reference OpenAPI endpoint
+### Autogenerate OpenAPI MDX files
+
+To add the OpenAPI endpoints onto your docs, you need to create MDX files for each endpoint. You can autogenerate these MDX files from your OpenAPI spec using our scraper - learn more [here](/api-playground/openapi-generation).
+
+After using the scraper, you can use the terminal output to add the files into your `mint.json` under `navigation` to structure them how you'd like in your docs. Otherwise, manually add the files into your `mint.json`.
+
+### Manually Reference OpenAPI endpoint
 
 <Snippet file="api-playground/openapi.mdx" />
 
@@ -18,8 +24,6 @@ By using the OpenAPI reference, the name, description, parameters, responses, an
   specifications exactly. Nothing is displayed if the endpoint doesn't exist in
   the OpenAPI file.
 </Note>
-
-You can autogenerate these MDX files from your OpenAPI spec using our scraper - learn more [here](/api-playground/openapi-generation).
 
 ### OpenAPI Schema
 
