--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,87 +3,122 @@ title: "Quickstart"
 description: "Start building awesome documentation in under 5 minutes"
 ---
 
-![Hero Image](https://mintlify-assets.b-cdn.net/illustration-optimized.svg)
+![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
 
-<Info>
-  **Prerequisite** You should have your Mintlify docs set up after going through
-  [onboarding](https://mintlify.com/start)
-</Info>
+## 1. Deploy your docs repo
 
-## Setup your development
-
-Learn how to update your docs locally and and deploy them to the public.
-
-### Edit and preview
+Mintlify docs are rendered from MDX files and configurations defined in our [starter template](https://github.com/mintlify/starter). We use Github to integrate your docs with your code, and make source control effortless.
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="github" title="Create your docs repo">
+    If you've already gone through our onboarding, this step has been completed
+    for you. Find your docs repo on your Mintlify
+    [dashboard](https://dashboard.mintlify.com). <br />
+
+    If you'd prefer to not log in with Github, you can clone our [starter
+    template](https://github.com/mintlify/starter). After cloning, reach out to [our team](mailto:support@mintlify.com) to
+    deploy this repo.
+    <img src="/images/starter-template.png" width="400px"/>
+
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+    <Accordion icon="message-bot" title="Install our Github app">
+    Install our Github app to ensure that your updates are automatically deployed when you push. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). 
+  Once the bot has been successfully installed, there should be a check mark next to the commit hash of the repo.
+![](/images/github-bot-verification.png)
+
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+## 2. Update your docs
+
+<Note>
+  Mintlify provides white-glove migrations as part of our startup plan. Request
+  one [here](mailto:josh@mintlify.com)
+</Note>
+
+Make your docs look and feel like you by easily updating style, structure, and content. Push changes to your Git repo to deploy.
 
 <AccordionGroup>
+  <Accordion icon="rectangle-terminal" title="Set up your editing environment">
+    **Edit locally (developer recommended):**
+    1. [Install git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git).
+    2. Clone your deployment repo with the command `git clone <your-repo>`. You may need to set up [SSH keys](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent) if you haven't before. 
+    3. Open the repo in your IDE of choice.
+    4. Preview changes with our [Mintlify CLI](/development). Install with `npm i -g mintlify`
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). 
-  Once the bot has been successfully installed, there should be a check mark next to the commit hash of the repo.
-![](/images/github-bot-verification.png)
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
+    **Edit online:**
+    There are two ways to edit your repo online.
+    - Find the edit button on the file you'd like to edit. This will open an in-line web editor in Github.
+    ![](/images/edit-online.png)
+    - Open your git repo in Github's [github.dev](https://github.dev) online IDE. Take the URL of your repo and replace `github.com` with `github.dev`. (e.g. `github.dev/mintlify/docs` instead of `github.com/mintlify/docs`)
+
+  </Accordion>
+  <Accordion icon="palette" title="Add your branding (mint.json)">
+    Update colors, logos, configure buttons, and more in our `mint.json` file. Get started with these simple ones: 
+    ```json
+    "name": "Your Company"
+    "logo": {
+      "light": "/logo/light.svg",
+      "dark": "/logo/dark.svg",
+      "href": "https://yourcompany.com"
+    },
+    "favicon": "/favicon.svg",
+    "colors": {
+      "primary": "#2AB673",
+      "light": "#55D799",
+      "dark": "#117866",
+    },
+    ```
+    See all supported configurations [here](/settings/global).
+  </Accordion>
+  <Accordion icon="pencil" title="Add content">
+  Add content with simple MDX files. Start your pages with: 
+  ```md
+  ---
+  title: "Page Title"
+  sidebarTitle: "Sidebar title (optional - if different from page title)"
+  description: "Subtitle (optional)"
+  ---
+  ```
+  Use [MDX syntax](/content/text) to add images, tables, lists, and more. Mintlify also offers a collection of components out of the box. You can find a complete list [here](/content/components).
+  </Accordion>
+  <Accordion icon="rocket" title="Push your changes">
   [Commit and push your changes to Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) for your changes to update in your docs site. If you push and don't see that the Github app successfully deployed your changes, you can also manually update your docs through our [dashboard](https://dashboard.mintlify.com).
   ![](/images/manual-update.png)
 
 </Accordion>
+</AccordionGroup>
+
+## 3. Supercharge your docs
+
+Mintlify supports API reference docs, analytics, versioning, and much more to give your docs the power to accommodate any use case.
+
+<AccordionGroup>
+<Accordion icon="code-branch" title="Generate API references">
+The easiest way to set up your API references is to use an OpenAPI spec. 
+1. Add your `openapi.yaml` or `openapi.json` file into your docs repo, or define the `openapi` field in `mint.json` to a URL.
+```json
+"openapi": "link-to-your-openapi-file"
+```
+2. Autogenerate the files for your OpenAPI endpoints using our [scraper](/api-playground/openapi-generation)
+```bash
+npx @mintlify/scraping@latest openapi-file <path-or-url-to-openapi-file>
+```
+3. Add the endpoint MDX files into your `mint.json` under `navigation`
+
+Learn more about using Mintlify with OpenAPI [here](/api-playground/openapi).<br />Learn more about configuring your API auth methods [here](/api-playground/overview).<br/>You can also manually define your API references with [our syntax](/api-playground/overview).
+
+</Accordion>
+<Accordion icon="star" title="Add a custom domain">
+Integrate your docs seamlessly into your website by hosting them on a custom domain. Custom domain are included in the Mintlify free plan. To add a custom domain, visit your [dashboard settings](https://www.dashboard.mintlify.com/settings).
+![](/images/custom-domain.png)
+</Accordion>
+<Accordion icon="chart-simple" title="Add analytics">
+Mintlify provides in-house analytics regarding page views, search analytics, session recordings and more - accessible on your [dashboard](https://dashboard.mintlify.com/analytics). We also support integrations with dozens of analytics providers. Find the entire support list [here](/integrations/analytics/overview)
+</Accordion>
 
 </AccordionGroup>
 
-## Update your docs
+## Congrats!
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/integrations/analytics/overview"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website’s subdomain.
-</Card>
-
-</CardGroup>
+You've set up your Mintlify docs and they look amazing! For support or feedback, please visit our [community](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or reach out to us at [support@mintlify.com](mailto:support@mintlify.com).
