--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "Build beautiful documentation that converts users"
 ---
 
-![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
+![Hero Image](https://mintlify-assets.b-cdn.net/illustration-optimized.svg)
 
 Welcome to Mintlify's docs! Get started creating beautiful docs effortlessly. If you have any questions, join our [Slack Community](https://mintlify.com/community) or [email us](mailto:support@mintlify.com).
 
