--- a/api-playground/openapi-generation.mdx
+++ b/api-playground/openapi-generation.mdx
@@ -3,16 +3,18 @@ title: "Autogenerate endpoints"
 description: "Create MDX files from your OpenAPI spec using our scraper"
 ---
 
-Our Mintlify scraper helps autogenerate MDX files for your OpenAPI endpoints. Use the relative path to the Openapi file or a URL to fetch the OpenAPI file.
+Our Mintlify scraper helps autogenerate MDX files for your OpenAPI endpoints. Use the relative path to the Openapi file in your codebase.
 
 ```bash
-npx @mintlify/scraping@latest openapi-file <path-or-url-to-openapi-file>
+npx @mintlify/scraping@latest openapi-file <path-to-openapi-file>
 ```
+
+If your OpenAPI file is hosted at a URL, copy the contents into an openapi.json or openapi.yaml file in your codebase to run the scraper once. You can delete this file after scraping has completed.
 
 Add the `-o` flag to specify a folder to populate the files into. If a folder is not specified, the files will populate into the current folder.
 
 ```bash
-npx @mintlify/scraping@latest openapi-file <path-or-url-openapi-file> -o api-reference
+npx @mintlify/scraping@latest openapi-file <path-to-openapi-file> -o api-reference
 ```
 
 Learn more about our scraping package [here](https://www.npmjs.com/package/@mintlify/scraping).
