--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Images and Embeds"
+title: "Images and Videos"
 description: "Add image, video, and other HTML elements"
 ---
 
@@ -67,7 +67,7 @@ For more information, we recommend the following sections:
   Read the reference for the Frame component
 </Card>
 
-## Videos and other HTML elements
+## Videos
 
 <iframe
   width="560"
@@ -79,12 +79,6 @@ For more information, we recommend the following sections:
   allowfullscreen
 ></iframe>
 
-<video
-  controls
-  className="w-full aspect-video"
-  src="link-to-your-video.com"
-></video>
-
 <br />
 
 <Tip>
@@ -92,8 +86,6 @@ For more information, we recommend the following sections:
 Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-syntax/#html). This is helpful if you prefer HTML tags to Markdown syntax, and lets you create documentation with infinite flexibility.
 
 </Tip>
-
-### Videos
 
 For YouTube videos use:
 
@@ -119,7 +111,30 @@ For other videos, use:
 ></video>
 ```
 
-### iFrames
+To autoplay the video, use:
+
+<video
+  autoplay
+  muted
+  loop
+  playsinline
+  controls
+  src="/images/video.webm"
+></video>
+
+```html
+<video
+  controls
+  autoplay
+  muted
+  loop
+  playsinline
+  className="w-full aspect-video"
+  src="link-to-your-video.com"
+></video>
+```
+
+## iFrames & Embeds
 
 Loads another HTML page within the document.
 
