update autoplay url

--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -119,7 +119,7 @@ To autoplay the video, use:
   loop
   playsinline
   controls
-  src="/images/video.webm"
+  src="https://res.cloudinary.com/mintlify/video/upload/v1690833246/Customers/Dynamic/video_f7lxcp.webm"
 ></video>
 
 ```html
