add autoplay back with correct instructions

--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -111,6 +111,20 @@ For other videos, use:
 ></video>
 ```
 
+To autoplay the video, use:
+
+```html
+<video
+  controls
+  autoplay
+  muted
+  loop
+  playsinline
+  className="w-full aspect-video"
+  src="link-to-your-video.com"
+></video>
+```
+
 ## iFrames & Embeds
 
 Loads another HTML page within the document.
