Add docs for thumbsRating

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Global Settings (mint.json)"
-description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
+title: 'Global Settings (mint.json)'
+description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
@@ -264,6 +264,9 @@ Example:
   Configurations to enable feedback buttons
 
   <Expandable title="Feedback">
+    <ResponseField name="thumbsRating" type="boolean" default="false">
+    Enables a rating system for users to indicate whether the page has been helpful
+    </ResponseField>
     <ResponseField name="suggestEdit" type="boolean" default="false">
     Enables a button to allow users to suggest edits via pull requests
     </ResponseField>
