--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Navigation"
-description: "Organize your docs directory to guide your users to the information they need "
+title: 'Navigation'
+description: 'Organize your docs directory to guide your users to the information they need '
 ---
 
 ## Tabs
@@ -78,7 +78,7 @@ To configure the default `Documentation` top anchor, add the `topAnchor` field t
 
 ## Sidebar
 
-Our sidebar navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx` in page names.
+Our sidebar navigation syntax is recursive which means you can make nested navigation groups. You also don't need to include `.mdx` in page names.
 
 <Info>
   Once you add a page to your docs directory, you'll need to add the path to
