--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Images and Videos"
+title: "Images, Videos, and Embeds"
 description: "Add image, video, and other HTML elements"
 ---
 
@@ -7,6 +7,10 @@ description: "Add image, video, and other HTML elements"
   className="rounded-md"
   src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
 />
+
+<Tip>
+  Mintlify supports files up to 5 MB. To use larger files, consider a storage service like Cloudinary and embed in your Mintlify documentation!
+</Tip>
 
 ## Image
 
@@ -115,7 +119,6 @@ To autoplay the video, use:
 
 ```html
 <video
-  controls
   autoPlay
   muted
   loop
@@ -125,7 +128,7 @@ To autoplay the video, use:
 ></video>
 ```
 
-## iFrames & Embeds
+## iFrames
 
 Loads another HTML page within the document.
 
@@ -133,24 +136,6 @@ Loads another HTML page within the document.
 <iframe src="https://www.youtube.com/embed/4KzFe50RQkQ"> </iframe>
 ```
 
-To have videos autoplay, add `autoplay = {true}`.
-
 <Tip>
-  {" "}
-  Additionally, we support mp4 files up to 5 MB and you can also upload your videos
-  to storage services like Cloudinary to reference them in your Mintlify documentation!{" "}
-</Tip>
-
-### Line Breaks
-
-Add a linebreak
-
-```html
-<br />
-```
-
-<Tip>
-
 Although not required, we recommend adding the `alt` and `title` attributes to images for better SEO and accessability. Learn more at [image SEO](https://yoast.com/image-seo-alt-tag-and-title-tag-optimization/).
-
 </Tip>
