--- a/content/text.mdx
+++ b/content/text.mdx
@@ -87,3 +87,17 @@ Mintlify supports [LaTeX](https://www.latex-project.org) through the Latex compo
 ```md
 <Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
 ```
+
+### Line Breaks
+
+Add a linebreak. Markdown syntax also recognizes a double enter in your MDX as a linebreak.
+
+```html
+<br />
+```
+
+```md
+Paragraph 1
+
+Paragraph 2
+```
