--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -23,6 +23,10 @@ Configure tabs with the `tabs` field of the `mint.json` file. The `url` field of
     {
         "name": "Content",
         "url": "content"
+    },
+    {
+        "name": "Blog",
+        "url": "https://your-website.com/blog"
     }
 ]
 ```
