add api folder warning

--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,7 +1,12 @@
 ---
-title: 'Navigation'
-description: 'Organize your docs directory to guide your users to the information they need '
+title: "Navigation"
+description: "Organize your docs directory to guide your users to the information they need "
 ---
+
+<Warning>
+  Note, folders cannot be named `api` due to NextJS limitations. Please try
+  `api-reference` as an alternative.
+</Warning>
 
 ## Tabs
 
